# azure_table_utils

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Azure Data Table Doc.url  Azure Data Table Samples.url  publish_in_pypi.txt
src/azure_table_utils/: __init__.py  main.py  utils.py
src/azure_tables_utils/: __init__.py  main.py  utils.py
