[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "azure_table_utils"
version = "0.0.5"
authors = [
  { name="Rafael Oliveira", email="r.negreiros@outlook.com.br" },
]
description = "A package to handle Azure Storage Table"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "azure-data-tables>=12.7.0",
    "azure-core>=1.34.0",
    "python-dotenv"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_table_utils"]